# skef

./: README.md  skef.cabal
src/: Main.hs  Parser.hs  Types.hs
tests/: test.skef
