name:                skef
version:             0.1.0.0
synopsis:            A language for developer lab notes.
homepage:            https://jelle.xyz/
license:             GPL-3
license-file:        LICENSE
author:              Jelle Hermsen
maintainer:          j@jelle.xyz
category:            Text
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

executable skef
  main-is:             Main.hs
  other-modules:       Types, Parser
  default-extensions:  OverloadedStrings
  build-depends:       base >=4.9, text >= 1.2, time >= 1.9, megaparsec >= 7.0.4
  hs-source-dirs:      src
  default-language:    Haskell2010
  GHC-Options:         -Wall -optl-no-pie
